adding oh-my-posh

--- a/dots/.config/hypr/configs/autostart.conf
+++ b/dots/.config/hypr/configs/autostart.conf
@@ -14,7 +14,7 @@ exec-once = $scriptsDir/Polkit.sh
 exec-once = swww-daemon --format xrgb
 exec-once = /usr/bin/pypr
 exec-once = hypridle
-
+exec-once = ~/.local/bin/watch-caelestia-scheme.sh
 # -----------------------------------------------------
 # [Clipboard Manager]
 # -----------------------------------------------------
