--- a/dots/.config/hypr/scheme/current.conf
+++ b/dots/.config/hypr/scheme/current.conf
@@ -1,109 +1,109 @@
-$primary_paletteKeyColor = 8a00fd
-$secondary_paletteKeyColor = 886e90
-$tertiary_paletteKeyColor = 966891
-$neutral_paletteKeyColor = 7c7481
-$neutral_variant_paletteKeyColor = 7d7484
-$background = 16111b
-$onBackground = e9dfee
-$surface = 16111b
-$surfaceDim = 16111b
-$surfaceBright = 3d3742
-$surfaceContainerLowest = 110c16
-$surfaceContainerLow = 1e1a24
-$surfaceContainer = 231e28
-$surfaceContainerHigh = 2d2833
-$surfaceContainerHighest = 38333e
-$onSurface = e9dfee
-$surfaceVariant = 4b4452
-$onSurfaceVariant = cdc3d4
-$inverseSurface = e9dfee
-$inverseOnSurface = 342e39
-$outline = 978d9e
-$outlineVariant = 4b4452
+$primary_paletteKeyColor = aa663f
+$secondary_paletteKeyColor = 91705f
+$tertiary_paletteKeyColor = 7c7948
+$neutral_paletteKeyColor = 81746e
+$neutral_variant_paletteKeyColor = 85746c
+$background = 1a120d
+$onBackground = f0dfd7
+$surface = 1a120d
+$surfaceDim = 1a120d
+$surfaceBright = 413732
+$surfaceContainerLowest = 140c09
+$surfaceContainerLow = 221a15
+$surfaceContainer = 271e19
+$surfaceContainerHigh = 322823
+$surfaceContainerHighest = 3d332e
+$onSurface = f0dfd7
+$surfaceVariant = 52443c
+$onSurfaceVariant = d7c2b9
+$inverseSurface = f0dfd7
+$inverseOnSurface = 382e29
+$outline = 9f8d84
+$outlineVariant = 52443c
 $shadow = 000000
 $scrim = 000000
-$surfaceTint = d9b9ff
-$primary = d9b9ff
-$onPrimary = 460085
-$primaryContainer = 6400ba
-$onPrimaryContainer = eedbff
-$inversePrimary = 8400f1
-$secondary = dabde2
-$onSecondary = 3d2846
-$secondaryContainer = 574160
-$onSecondaryContainer = f7d8ff
-$tertiary = ebb6e4
-$onTertiary = 482247
-$tertiaryContainer = b181ac
+$surfaceTint = ffb68e
+$primary = ffb68e
+$onPrimary = 532201
+$primaryContainer = 6f3714
+$onPrimaryContainer = ffdbca
+$inversePrimary = 8c4e29
+$secondary = e6beab
+$onSecondary = 432b1d
+$secondaryContainer = 5f4334
+$onSecondaryContainer = ffdbca
+$tertiary = cec991
+$onTertiary = 343208
+$tertiaryContainer = 979360
 $onTertiaryContainer = 000000
 $error = ffb4ab
 $onError = 690005
 $errorContainer = 93000a
 $onErrorContainer = ffdad6
-$primaryFixed = eedbff
-$primaryFixedDim = d9b9ff
-$onPrimaryFixed = 2a0054
-$onPrimaryFixedVariant = 6400ba
-$secondaryFixed = f7d8ff
-$secondaryFixedDim = dabde2
-$onSecondaryFixed = 271430
-$onSecondaryFixedVariant = 553f5d
-$tertiaryFixed = ffd6f7
-$tertiaryFixedDim = ebb6e4
-$onTertiaryFixed = 300c31
-$onTertiaryFixedVariant = 61385f
-$term0 = 353434
-$term1 = d656ff
-$term2 = ffbac2
-$term3 = ffdcf2
-$term4 = a7a6d8
-$term5 = c899e0
-$term6 = 9dceff
-$term7 = e8d3de
-$term8 = ad9fa8
-$term9 = e481ff
-$term10 = ffd2d5
-$term11 = fff0f6
-$term12 = babfdd
-$term13 = dab0eb
-$term14 = bae0ff
+$primaryFixed = ffdbca
+$primaryFixedDim = ffb68e
+$onPrimaryFixed = 331200
+$onPrimaryFixedVariant = 6f3714
+$secondaryFixed = ffdbca
+$secondaryFixedDim = e6beab
+$onSecondaryFixed = 2b160a
+$onSecondaryFixedVariant = 5c4132
+$tertiaryFixed = eae5ab
+$tertiaryFixedDim = cec991
+$onTertiaryFixed = 1e1c00
+$onTertiaryFixedVariant = 4b481d
+$term0 = 353433
+$term1 = f46300
+$term2 = ffbf88
+$term3 = ffe0cd
+$term4 = b9ab66
+$term5 = f19272
+$term6 = febc73
+$term7 = eed3c3
+$term8 = b39f93
+$term9 = ff884d
+$term10 = ffd5b5
+$term11 = fff1ea
+$term12 = dcbc93
+$term13 = ffaa8c
+$term14 = ffd3a9
 $term15 = ffffff
-$rosewater = faeef7
-$flamingo = efdcf0
-$pink = efd3ff
-$mauve = d4b1ff
-$red = d79ff0
-$maroon = d8b1e4
-$peach = efbeee
-$yellow = ffecf3
-$green = c8e3ff
-$teal = ddddff
-$sky = dbd7ff
-$sapphire = c8c0ff
-$blue = c5b1ff
-$lavender = d7c3ff
-$klink = 8b7bce
-$klinkSelection = 8b7bce
-$kvisited = 9b6ace
-$kvisitedSelection = 9b6ace
-$knegative = c05be7
-$knegativeSelection = c05be7
-$kneutral = ee7ffc
-$kneutralSelection = ee7ffc
-$kpositive = 60adff
-$kpositiveSelection = 60adff
-$text = e9dfee
-$subtext1 = cdc3d4
-$subtext0 = 978d9e
-$overlay2 = 847a8a
-$overlay1 = 706776
-$overlay0 = 5e5664
-$surface2 = 4d4552
-$surface1 = 3b3541
-$surface0 = 28232e
-$base = 16111b
-$mantle = 16111b
-$crust = 15101a
+$rosewater = ffeee8
+$flamingo = ffdacc
+$pink = ffd3c8
+$mauve = ffab9d
+$red = ff9a74
+$maroon = f9ac8f
+$peach = ffc09e
+$yellow = ffeee4
+$green = ffd9b4
+$teal = ffdb94
+$sky = e1df87
+$sapphire = f2b2f2
+$blue = ffa2bd
+$lavender = ffbcbb
+$klink = bf6ba0
+$klinkSelection = bf6ba0
+$kvisited = ce5f48
+$kvisitedSelection = cf5e49
+$knegative = e65c0c
+$knegativeSelection = e65c0f
+$kneutral = ff8c43
+$kneutralSelection = ff8c45
+$kpositive = ed9600
+$kpositiveSelection = ee9500
+$text = f0dfd7
+$subtext1 = d7c2b9
+$subtext0 = 9f8d84
+$overlay2 = 8b7b72
+$overlay1 = 776860
+$overlay0 = 64574f
+$surface2 = 52463f
+$surface1 = 40352f
+$surface0 = 2d231e
+$base = 1a120d
+$mantle = 1a120d
+$crust = 19110c
 $success = B5CCBA
 $onSuccess = 213528
 $successContainer = 374B3E
