--- a/dots/.config/hypr/scheme/current.conf
+++ b/dots/.config/hypr/scheme/current.conf
@@ -1,109 +1,109 @@
-$primary_paletteKeyColor = aa663f
-$secondary_paletteKeyColor = 91705f
-$tertiary_paletteKeyColor = 7c7948
-$neutral_paletteKeyColor = 81746e
-$neutral_variant_paletteKeyColor = 85746c
-$background = 1a120d
-$onBackground = f0dfd7
-$surface = 1a120d
-$surfaceDim = 1a120d
-$surfaceBright = 413732
-$surfaceContainerLowest = 140c09
-$surfaceContainerLow = 221a15
-$surfaceContainer = 271e19
-$surfaceContainerHigh = 322823
-$surfaceContainerHighest = 3d332e
-$onSurface = f0dfd7
-$surfaceVariant = 52443c
-$onSurfaceVariant = d7c2b9
-$inverseSurface = f0dfd7
-$inverseOnSurface = 382e29
-$outline = 9f8d84
-$outlineVariant = 52443c
+$primary_paletteKeyColor = 5878ab
+$secondary_paletteKeyColor = 6d778a
+$tertiary_paletteKeyColor = 886e8f
+$neutral_paletteKeyColor = 75777d
+$neutral_variant_paletteKeyColor = 74777f
+$background = 111318
+$onBackground = e1e2e9
+$surface = 111318
+$surfaceDim = 111318
+$surfaceBright = 37393e
+$surfaceContainerLowest = 0c0e13
+$surfaceContainerLow = 191c20
+$surfaceContainer = 1d2024
+$surfaceContainerHigh = 282a2f
+$surfaceContainerHighest = 33353a
+$onSurface = e1e2e9
+$surfaceVariant = 43474e
+$onSurfaceVariant = c4c6cf
+$inverseSurface = e1e2e9
+$inverseOnSurface = 2e3035
+$outline = 8e9199
+$outlineVariant = 43474e
 $shadow = 000000
 $scrim = 000000
-$surfaceTint = ffb68e
-$primary = ffb68e
-$onPrimary = 532201
-$primaryContainer = 6f3714
-$onPrimaryContainer = ffdbca
-$inversePrimary = 8c4e29
-$secondary = e6beab
-$onSecondary = 432b1d
-$secondaryContainer = 5f4334
-$onSecondaryContainer = ffdbca
-$tertiary = cec991
-$onTertiary = 343208
-$tertiaryContainer = 979360
+$surfaceTint = a7c8ff
+$primary = a7c8ff
+$onPrimary = 04305f
+$primaryContainer = 244777
+$onPrimaryContainer = d5e3ff
+$inversePrimary = 3e5f90
+$secondary = bdc7dc
+$onSecondary = 273141
+$secondaryContainer = 40495b
+$onSecondaryContainer = d9e3f8
+$tertiary = dbbce1
+$onTertiary = 3e2845
+$tertiaryContainer = a387aa
 $onTertiaryContainer = 000000
 $error = ffb4ab
 $onError = 690005
 $errorContainer = 93000a
 $onErrorContainer = ffdad6
-$primaryFixed = ffdbca
-$primaryFixedDim = ffb68e
-$onPrimaryFixed = 331200
-$onPrimaryFixedVariant = 6f3714
-$secondaryFixed = ffdbca
-$secondaryFixedDim = e6beab
-$onSecondaryFixed = 2b160a
-$onSecondaryFixedVariant = 5c4132
-$tertiaryFixed = eae5ab
-$tertiaryFixedDim = cec991
-$onTertiaryFixed = 1e1c00
-$onTertiaryFixedVariant = 4b481d
-$term0 = 353433
-$term1 = f46300
-$term2 = ffbf88
-$term3 = ffe0cd
-$term4 = b9ab66
-$term5 = f19272
-$term6 = febc73
-$term7 = eed3c3
-$term8 = b39f93
-$term9 = ff884d
-$term10 = ffd5b5
-$term11 = fff1ea
-$term12 = dcbc93
-$term13 = ffaa8c
-$term14 = ffd3a9
+$primaryFixed = d5e3ff
+$primaryFixedDim = a7c8ff
+$onPrimaryFixed = 001b3c
+$onPrimaryFixedVariant = 244777
+$secondaryFixed = d9e3f8
+$secondaryFixedDim = bdc7dc
+$onSecondaryFixed = 121c2b
+$onSecondaryFixedVariant = 3d4758
+$tertiaryFixed = f8d8fe
+$tertiaryFixedDim = dbbce1
+$onTertiaryFixed = 28132f
+$onTertiaryFixedVariant = 563e5d
+$term0 = 343434
+$term1 = 8483ff
+$term2 = 44def5
+$term3 = ffdcf2
+$term4 = 8aaed3
+$term5 = 9ca5ef
+$term6 = 94d0fa
+$term7 = e8d3de
+$term8 = ac9fa9
+$term9 = a29eff
+$term10 = 89ecff
+$term11 = c9fff3
+$term12 = adc4d9
+$term13 = b5baf8
+$term14 = b6e1ff
 $term15 = ffffff
-$rosewater = ffeee8
-$flamingo = ffdacc
-$pink = ffd3c8
-$mauve = ffab9d
-$red = ff9a74
-$maroon = f9ac8f
-$peach = ffc09e
-$yellow = ffeee4
-$green = ffd9b4
-$teal = ffdb94
-$sky = e1df87
-$sapphire = f2b2f2
-$blue = ffa2bd
-$lavender = ffbcbb
-$klink = bf6ba0
-$klinkSelection = bf6ba0
-$kvisited = ce5f48
-$kvisitedSelection = cf5e49
-$knegative = e65c0c
-$knegativeSelection = e65c0f
-$kneutral = ff8c43
-$kneutralSelection = ff8c45
-$kpositive = ed9600
-$kpositiveSelection = ee9500
-$text = f0dfd7
-$subtext1 = d7c2b9
-$subtext0 = 9f8d84
-$overlay2 = 8b7b72
-$overlay1 = 776860
-$overlay0 = 64574f
-$surface2 = 52463f
-$surface1 = 40352f
-$surface0 = 2d231e
-$base = 1a120d
-$mantle = 1a120d
-$crust = 19110c
+$rosewater = f4f0fa
+$flamingo = e2e0f5
+$pink = d6dbff
+$mauve = a9bfff
+$red = a6aeff
+$maroon = b7baf1
+$peach = e0c2f9
+$yellow = d0f9f4
+$green = c1e4ff
+$teal = c7e3ff
+$sky = c2deff
+$sapphire = a1caff
+$blue = 97beff
+$lavender = b5cdff
+$klink = 5289cd
+$klinkSelection = 5389ce
+$kvisited = 5a7cdd
+$kvisitedSelection = 5b7bdd
+$knegative = 7379ff
+$knegativeSelection = 7479ff
+$kneutral = c794ff
+$kneutralSelection = c794ff
+$kpositive = 00b4fc
+$kpositiveSelection = 00b4fd
+$text = e1e2e9
+$subtext1 = c4c6cf
+$subtext0 = 8e9199
+$overlay2 = 7b7e86
+$overlay1 = 686b72
+$overlay0 = 575960
+$surface2 = 46484f
+$surface1 = 35373d
+$surface0 = 23252a
+$base = 111318
+$mantle = 111318
+$crust = 101217
 $success = B5CCBA
 $onSuccess = 213528
 $successContainer = 374B3E
