setup default oh-my-posh

--- a/dots/.config/hypr/scheme/current.conf
+++ b/dots/.config/hypr/scheme/current.conf
@@ -1,109 +1,109 @@
-$primary_paletteKeyColor = 5878ab
-$secondary_paletteKeyColor = 6d778a
-$tertiary_paletteKeyColor = 886e8f
+$primary_paletteKeyColor = 517aa9
+$secondary_paletteKeyColor = 6c788a
+$tertiary_paletteKeyColor = 856f92
 $neutral_paletteKeyColor = 75777d
-$neutral_variant_paletteKeyColor = 74777f
-$background = 111318
-$onBackground = e1e2e9
-$surface = 111318
-$surfaceDim = 111318
-$surfaceBright = 37393e
-$surfaceContainerLowest = 0c0e13
+$neutral_variant_paletteKeyColor = 73777f
+$background = 111418
+$onBackground = e1e2e8
+$surface = 111418
+$surfaceDim = 111418
+$surfaceBright = 36393e
+$surfaceContainerLowest = 0b0e13
 $surfaceContainerLow = 191c20
 $surfaceContainer = 1d2024
-$surfaceContainerHigh = 282a2f
-$surfaceContainerHighest = 33353a
-$onSurface = e1e2e9
+$surfaceContainerHigh = 272a2f
+$surfaceContainerHighest = 32353a
+$onSurface = e1e2e8
 $surfaceVariant = 43474e
-$onSurfaceVariant = c4c6cf
-$inverseSurface = e1e2e9
-$inverseOnSurface = 2e3035
-$outline = 8e9199
+$onSurfaceVariant = c3c6cf
+$inverseSurface = e1e2e8
+$inverseOnSurface = 2e3135
+$outline = 8d9199
 $outlineVariant = 43474e
 $shadow = 000000
 $scrim = 000000
-$surfaceTint = a7c8ff
-$primary = a7c8ff
-$onPrimary = 04305f
-$primaryContainer = 244777
-$onPrimaryContainer = d5e3ff
-$inversePrimary = 3e5f90
-$secondary = bdc7dc
-$onSecondary = 273141
-$secondaryContainer = 40495b
-$onSecondaryContainer = d9e3f8
-$tertiary = dbbce1
-$onTertiary = 3e2845
-$tertiaryContainer = a387aa
+$surfaceTint = a1cafd
+$primary = a1cafd
+$onPrimary = 003259
+$primaryContainer = 1a4975
+$onPrimaryContainer = d2e4ff
+$inversePrimary = 36618e
+$secondary = bbc7db
+$onSecondary = 253140
+$secondaryContainer = 3b4858
+$onSecondaryContainer = d7e3f8
+$tertiary = d7bee4
+$onTertiary = 3b2947
+$tertiaryContainer = 9f88ac
 $onTertiaryContainer = 000000
 $error = ffb4ab
 $onError = 690005
 $errorContainer = 93000a
 $onErrorContainer = ffdad6
-$primaryFixed = d5e3ff
-$primaryFixedDim = a7c8ff
-$onPrimaryFixed = 001b3c
-$onPrimaryFixedVariant = 244777
-$secondaryFixed = d9e3f8
-$secondaryFixedDim = bdc7dc
-$onSecondaryFixed = 121c2b
-$onSecondaryFixedVariant = 3d4758
-$tertiaryFixed = f8d8fe
-$tertiaryFixedDim = dbbce1
-$onTertiaryFixed = 28132f
-$onTertiaryFixedVariant = 563e5d
+$primaryFixed = d2e4ff
+$primaryFixedDim = a1cafd
+$onPrimaryFixed = 001d36
+$onPrimaryFixedVariant = 1a4975
+$secondaryFixed = d7e3f8
+$secondaryFixedDim = bbc7db
+$onSecondaryFixed = 101c2b
+$onSecondaryFixedVariant = 3b4858
+$tertiaryFixed = f3daff
+$tertiaryFixedDim = d7bee4
+$onTertiaryFixed = 251431
+$onTertiaryFixedVariant = 523f5f
 $term0 = 343434
-$term1 = 8483ff
+$term1 = 8383ff
 $term2 = 44def5
-$term3 = ffdcf2
-$term4 = 8aaed3
-$term5 = 9ca5ef
-$term6 = 94d0fa
-$term7 = e8d3de
+$term3 = 75fcdd
+$term4 = 86afd1
+$term5 = 94a7ef
+$term6 = 8fd2f6
+$term7 = ccdcd6
 $term8 = ac9fa9
 $term9 = a29eff
 $term10 = 89ecff
 $term11 = c9fff3
-$term12 = adc4d9
-$term13 = b5baf8
-$term14 = b6e1ff
+$term12 = abc4d8
+$term13 = b0bcf8
+$term14 = afe2ff
 $term15 = ffffff
 $rosewater = f4f0fa
-$flamingo = e2e0f5
-$pink = d6dbff
-$mauve = a9bfff
-$red = a6aeff
-$maroon = b7baf1
+$flamingo = e0e0f5
+$pink = d3dcff
+$mauve = a2c0ff
+$red = 9eb0ff
+$maroon = b2bcf1
 $peach = e0c2f9
 $yellow = d0f9f4
-$green = c1e4ff
-$teal = c7e3ff
-$sky = c2deff
-$sapphire = a1caff
-$blue = 97beff
-$lavender = b5cdff
-$klink = 5289cd
-$klinkSelection = 5389ce
-$kvisited = 5a7cdd
-$kvisitedSelection = 5b7bdd
-$knegative = 7379ff
-$knegativeSelection = 7479ff
+$green = bbe6ff
+$teal = c2e4ff
+$sky = bddfff
+$sapphire = 99ccff
+$blue = 8ec0ff
+$lavender = b0ceff
+$klink = 498bcb
+$klinkSelection = 498bcb
+$kvisited = 4e7edc
+$kvisitedSelection = 4e7edc
+$knegative = 657cff
+$knegativeSelection = 657cff
 $kneutral = c794ff
 $kneutralSelection = c794ff
-$kpositive = 00b4fc
-$kpositiveSelection = 00b4fd
-$text = e1e2e9
-$subtext1 = c4c6cf
-$subtext0 = 8e9199
-$overlay2 = 7b7e86
-$overlay1 = 686b72
-$overlay0 = 575960
-$surface2 = 46484f
-$surface1 = 35373d
-$surface0 = 23252a
-$base = 111318
-$mantle = 111318
-$crust = 101217
+$kpositive = 00b6f2
+$kpositiveSelection = 00b6f2
+$text = e1e2e8
+$subtext1 = c3c6cf
+$subtext0 = 8d9199
+$overlay2 = 7a7e86
+$overlay1 = 676b72
+$overlay0 = 565a60
+$surface2 = 45494e
+$surface1 = 35383d
+$surface0 = 23262a
+$base = 111418
+$mantle = 111418
+$crust = 101317
 $success = B5CCBA
 $onSuccess = 213528
 $successContainer = 374B3E
