change border hypr to be applied when scheme color from quickshell changed

--- a/dots/.config/hypr/configs/autostart.conf
+++ b/dots/.config/hypr/configs/autostart.conf
@@ -14,8 +14,7 @@ exec-once = $scriptsDir/Polkit.sh
 exec-once = swww-daemon --format xrgb
 exec-once = /usr/bin/pypr
 exec-once = hypridle
-exec-once = ~/.local/bin/watch-caelestia-scheme.sh
-# -----------------------------------------------------
+# ----------------------------------------------chmod +x ~/.config/hypr/scripts/watch_theme.sh-------
 # [Clipboard Manager]
 # -----------------------------------------------------
 exec-once = wl-paste --type text --watch cliphist store
