--- a/dots/.config/hypr/configs/settings.conf
+++ b/dots/.config/hypr/configs/settings.conf
@@ -6,6 +6,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Variables/ for a complete list
 source = $HOME/.config/hypr/configs/wallust-hyprland.conf
+source = $HOME/.config/hypr/colors.conf
 # -----------------------------------------------------
 # [Layout]
 # -----------------------------------------------------
@@ -25,11 +26,14 @@ general {
     resize_on_border = true
     gaps_in = 4
     gaps_out = 7
-    border_size = 1
-    col.active_border = $color1 $color6 $color3 $color4 $color2 $color6
-    col.inactive_border = $color1 $color9
+    border_size = 4
+    # col.active_border = $color1 $color6 $color3 $color4 $color2 $color6
+    # col.inactive_border = $color1 $color9
+    # col.active_border = rgba(123,66,206,0.5)
+    # col.inactive_border = rgba(94,89,92,0.5)
+    col.active_border = $active_border_col
+    col.inactive_border = $inactive_border_col
 }
-
 # -----------------------------------------------------
 # [Decoration]
 # -----------------------------------------------------
