--- a/dots/.config/hypr/hyprland.conf
+++ b/dots/.config/hypr/hyprland.conf
@@ -29,6 +29,7 @@ source = ~/.config/hypr/configs/user_defaults.conf
 source = ~/.config/hypr/configs/settings.conf
 source = ~/.config/hypr/configs/autostart.conf
 source = ~/.config/hypr/configs/keybinds.conf
+source = ~/.config/hypr/configs/wskeybinds.conf
 source = ~/.config/hypr/configs/windowrules.conf
 source = ~/.config/hypr/configs/wallust-hyprland.conf
 
