--- a/dots/.config/hypr/scheme/current.conf
+++ b/dots/.config/hypr/scheme/current.conf
@@ -1,109 +1,109 @@
-$primary_paletteKeyColor = 517aa9
-$secondary_paletteKeyColor = 6c788a
-$tertiary_paletteKeyColor = 856f92
-$neutral_paletteKeyColor = 75777d
-$neutral_variant_paletteKeyColor = 73777f
-$background = 111418
-$onBackground = e1e2e8
-$surface = 111418
-$surfaceDim = 111418
-$surfaceBright = 36393e
-$surfaceContainerLowest = 0b0e13
-$surfaceContainerLow = 191c20
-$surfaceContainer = 1d2024
-$surfaceContainerHigh = 272a2f
-$surfaceContainerHighest = 32353a
-$onSurface = e1e2e8
-$surfaceVariant = 43474e
-$onSurfaceVariant = c3c6cf
-$inverseSurface = e1e2e8
-$inverseOnSurface = 2e3135
-$outline = 8d9199
-$outlineVariant = 43474e
+$primary_paletteKeyColor = 6674ac
+$secondary_paletteKeyColor = 71768e
+$tertiary_paletteKeyColor = 9a6593
+$neutral_paletteKeyColor = 77767b
+$neutral_variant_paletteKeyColor = 757680
+$background = 131317
+$onBackground = e4e1e7
+$surface = 131317
+$surfaceDim = 131317
+$surfaceBright = 39393d
+$surfaceContainerLowest = 0d0e12
+$surfaceContainerLow = 1b1b1f
+$surfaceContainer = 1f1f23
+$surfaceContainerHigh = 292a2e
+$surfaceContainerHighest = 343438
+$onSurface = e4e1e7
+$surfaceVariant = 45464f
+$onSurfaceVariant = c6c5d1
+$inverseSurface = e4e1e7
+$inverseOnSurface = 303034
+$outline = 8f909a
+$outlineVariant = 45464f
 $shadow = 000000
 $scrim = 000000
-$surfaceTint = a1cafd
-$primary = a1cafd
-$onPrimary = 003259
-$primaryContainer = 1a4975
-$onPrimaryContainer = d2e4ff
-$inversePrimary = 36618e
-$secondary = bbc7db
-$onSecondary = 253140
-$secondaryContainer = 3b4858
-$onSecondaryContainer = d7e3f8
-$tertiary = d7bee4
-$onTertiary = 3b2947
-$tertiaryContainer = 9f88ac
+$surfaceTint = b7c4ff
+$primary = b7c4ff
+$onPrimary = 1e2d60
+$primaryContainer = 6674ac
+$onPrimaryContainer = ffffff
+$inversePrimary = 4e5c92
+$secondary = c1c5e0
+$onSecondary = 2a2f44
+$secondaryContainer = 41465c
+$onSecondaryContainer = afb4ce
+$tertiary = f1b3e6
+$onTertiary = 4c1f49
+$tertiaryContainer = b67fae
 $onTertiaryContainer = 000000
 $error = ffb4ab
 $onError = 690005
 $errorContainer = 93000a
 $onErrorContainer = ffdad6
-$primaryFixed = d2e4ff
-$primaryFixedDim = a1cafd
-$onPrimaryFixed = 001d36
-$onPrimaryFixedVariant = 1a4975
-$secondaryFixed = d7e3f8
-$secondaryFixedDim = bbc7db
-$onSecondaryFixed = 101c2b
-$onSecondaryFixedVariant = 3b4858
-$tertiaryFixed = f3daff
-$tertiaryFixedDim = d7bee4
-$onTertiaryFixed = 251431
-$onTertiaryFixedVariant = 523f5f
-$term0 = 343434
-$term1 = 8383ff
+$primaryFixed = dce1ff
+$primaryFixedDim = b7c4ff
+$onPrimaryFixed = 05164b
+$onPrimaryFixedVariant = 364478
+$secondaryFixed = dde1fd
+$secondaryFixedDim = c1c5e0
+$onSecondaryFixed = 151b2e
+$onSecondaryFixedVariant = 41465c
+$tertiaryFixed = ffd7f5
+$tertiaryFixedDim = f1b3e6
+$onTertiaryFixed = 330832
+$onTertiaryFixedVariant = 653661
+$term0 = 353434
+$term1 = 9a7bff
 $term2 = 44def5
-$term3 = 75fcdd
-$term4 = 86afd1
-$term5 = 94a7ef
-$term6 = 8fd2f6
-$term7 = ccdcd6
+$term3 = ffdcf2
+$term4 = 92acd6
+$term5 = a9a2ed
+$term6 = 9dceff
+$term7 = e8d3de
 $term8 = ac9fa9
-$term9 = a29eff
+$term9 = b299ff
 $term10 = 89ecff
-$term11 = c9fff3
-$term12 = abc4d8
-$term13 = b0bcf8
-$term14 = afe2ff
+$term11 = fff0f6
+$term12 = b1c2db
+$term13 = c1b7f7
+$term14 = bae0ff
 $term15 = ffffff
-$rosewater = f4f0fa
-$flamingo = e0e0f5
-$pink = d3dcff
-$mauve = a2c0ff
-$red = 9eb0ff
-$maroon = b2bcf1
+$rosewater = f5eff9
+$flamingo = e5def4
+$pink = dcd9ff
+$mauve = b5bbff
+$red = b5a9ff
+$maroon = c1b7ef
 $peach = e0c2f9
-$yellow = d0f9f4
-$green = bbe6ff
-$teal = c2e4ff
-$sky = bddfff
-$sapphire = 99ccff
-$blue = 8ec0ff
-$lavender = b0ceff
-$klink = 498bcb
-$klinkSelection = 498bcb
-$kvisited = 4e7edc
-$kvisitedSelection = 4e7edc
-$knegative = 657cff
-$knegativeSelection = 657cff
+$yellow = ffecf3
+$green = c8e3ff
+$teal = cee1ff
+$sky = cadcff
+$sapphire = aec7ff
+$blue = a6baff
+$lavender = bfcaff
+$klink = 6685d1
+$klinkSelection = 6585d1
+$kvisited = 7276dd
+$kvisitedSelection = 7276dd
+$knegative = 8e70ff
+$knegativeSelection = 8e70ff
 $kneutral = c794ff
 $kneutralSelection = c794ff
-$kpositive = 00b6f2
-$kpositiveSelection = 00b6f2
-$text = e1e2e8
-$subtext1 = c3c6cf
-$subtext0 = 8d9199
-$overlay2 = 7a7e86
-$overlay1 = 676b72
-$overlay0 = 565a60
-$surface2 = 45494e
-$surface1 = 35383d
-$surface0 = 23262a
-$base = 111418
-$mantle = 111418
-$crust = 101317
+$kpositive = 54afff
+$kpositiveSelection = 54afff
+$text = e4e1e7
+$subtext1 = c6c5d1
+$subtext0 = 8f909a
+$overlay2 = 7d7d86
+$overlay1 = 6a6a72
+$overlay0 = 585960
+$surface2 = 48484e
+$surface1 = 37373d
+$surface0 = 25252a
+$base = 131317
+$mantle = 131317
+$crust = 121216
 $success = B5CCBA
 $onSuccess = 213528
 $successContainer = 374B3E
