--- a/dots/.config/hypr/configs/keybinds.conf
+++ b/dots/.config/hypr/configs/keybinds.conf
@@ -17,16 +17,6 @@ source= $UserConfigs/user_defaults.conf
 exec = hyprctl dispatch submap global
 submap = global
 
-bindi = $mainMod, Super_L, global, caelestia:launcher
-bindin = Super, catchall, global, caelestia:launcherInterrupt
-bindin = Super, mouse:272, global, caelestia:launcherInterrupt
-bindin = Super, mouse:273, global, caelestia:launcherInterrupt
-bindin = Super, mouse:274, global, caelestia:launcherInterrupt
-bindin = Super, mouse:275, global, caelestia:launcherInterrupt
-bindin = Super, mouse:276, global, caelestia:launcherInterrupt
-bindin = Super, mouse:277, global, caelestia:launcherInterrupt
-bindin = Super, mouse_up, global, caelestia:launcherInterrupt
-bindin = Super, mouse_down, global, caelestia:launcherInterrupt
 
 bind = $mainMod ALT, DELETE, global, caelestia:session
 bind = $mainMod, K, global, caelestia:showall
@@ -39,6 +29,7 @@ bind = $mainMod, grave, exec, hyprctl dispatch togglespecialworkspace
 # Move active window to special workspace
 bind = $mainMod ALT, grave, exec, hyprctl dispatch movetoworkspace special
 # bind = $mainMod SHIFT, grave, exec, hyprctl dispatch togglespecialworkspace specialws
+bind = $mainMod SHIFT, I , exec, $scriptsDir/KeyBinds.sh # search keybinds via rofi
 
 # -----------------------------------------------------
 # [Core Applications]
@@ -55,117 +46,6 @@ bind = $mainMod SHIFT, Return, exec, $scriptsDir/Dropterminal.sh $term
 bind = $mainMod, F, fullscreen
 # bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
-
-# Resize windows
-binde = $mainMod SHIFT, left, resizeactive,-50 0
-binde = $mainMod SHIFT, right, resizeactive,50 0
-binde = $mainMod SHIFT, up, resizeactive,0 -50
-binde = $mainMod SHIFT, down, resizeactive,0 50
-
-# Resize windows
-binde = $mainMod SHIFT, H, resizeactive,-50 0
-binde = $mainMod SHIFT, L, resizeactive,50 0
-binde = $mainMod SHIFT, K, resizeactive,0 -50
-binde = $mainMod SHIFT, J, resizeactive,0 50
-# Move windows
-bind = $mainMod CTRL, left, movewindow, l
-bind = $mainMod CTRL, right, movewindow, r
-bind = $mainMod CTRL, up, movewindow, u
-bind = $mainMod CTRL, down, movewindow, d
-
-# Move windows
-bind = $mainMod CTRL, H, movewindow, l
-bind = $mainMod CTRL, L, movewindow, r
-bind = $mainMod CTRL, K, movewindow, u
-bind = $mainMod CTRL, J, movewindow, d
-# Swap windows
-bind = $mainMod ALT, left, swapwindow, l
-bind = $mainMod ALT, right, swapwindow, r
-bind = $mainMod ALT, up, swapwindow, u
-bind = $mainMod ALT, down, swapwindow, d
-
-# Swap windows
-bind = $mainMod ALT, H, swapwindow, l
-bind = $mainMod ALT, L, swapwindow, r
-bind = $mainMod ALT, K, swapwindow, u
-bind = $mainMod ALT, J, swapwindow, d
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
-
-
-
-# -----------------------------------------------------
-# [Workspace Management]
-# -----------------------------------------------------
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-bind = $mainMod CTRL, code:10, movetoworkspacesilent, 1 # NOTE: code:10 = key 1
-bind = $mainMod CTRL, code:11, movetoworkspacesilent, 2 # NOTE: code:11 = key 2
-bind = $mainMod CTRL, code:12, movetoworkspacesilent, 3 # NOTE: code:12 = key 3
-bind = $mainMod CTRL, code:13, movetoworkspacesilent, 4 # NOTE: code:13 = key 4
-bind = $mainMod CTRL, code:14, movetoworkspacesilent, 5 # NOTE: code:14 = key 5
-bind = $mainMod CTRL, code:15, movetoworkspacesilent, 6 # NOTE: code:15 = key 6
-bind = $mainMod CTRL, code:16, movetoworkspacesilent, 7 # NOTE: code:16 = key 7
-bind = $mainMod CTRL, code:17, movetoworkspacesilent, 8 # NOTE: code:17 = key 8
-bind = $mainMod CTRL, code:18, movetoworkspacesilent, 9 # NOTE: code:18 = key 9
-bind = $mainMod CTRL, code:19, movetoworkspacesilent, 10 # NOTE: code:19 = key 0
-bind = $mainMod CTRL, bracketleft, movetoworkspacesilent, -1 # brackets [
-bind = $mainMod CTRL, bracketright, movetoworkspacesilent, +1 # brackets ]
-
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow # NOTE: mouse:272 = left click
-bindm = $mainMod, mouse:273, resizewindow # NOTE: mouse:272 = right click
-
-
-bind = $mainMod ALT, 1, exec, $scriptsDir/setWallpaper.sh 1
-bind = $mainMod ALT, 2, exec, $scriptsDir/setWallpaper.sh 2
-bind = $mainMod ALT, 3, exec, $scriptsDir/setWallpaper.sh 3
-bind = $mainMod ALT, 4, exec, $scriptsDir/setWallpaper.sh 4
-bind = $mainMod ALT, 5, exec, $scriptsDir/setWallpaper.sh 5
-bind = $mainMod ALT, 6, exec, $scriptsDir/setWallpaper.sh 6
-# -----------------------------------------------------
-# [Hardware Keys] (Audio & Brightness)
-# -----------------------------------------------------
-binde=, XF86AudioRaiseVolume, exec, $scriptsDir/Volume.sh --inc
-binde=, XF86AudioLowerVolume, exec, $scriptsDir/Volume.sh --dec
-bind=, XF86AudioMute, exec, $scriptsDir/Volume.sh --toggle
-binde=, XF86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc
-binde=, XF86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec
-binde=, XF86KbdBrightnessUp, exec, $scriptsDir/BrightnessKbd.sh --inc
-binde=, XF86KbdBrightnessDown, exec, $scriptsDir/BrightnessKbd.sh --dec
-bind=, XF86TouchpadToggle, exec, $scriptsDir/TouchPad.sh
 
 bind= $mainMod, X, exec, $scriptsDir/volume.sh --inc
 bind= $mainMod, Z, exec, $scriptsDir/volume.sh --dec
